// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact notes icon and prompt are shown if no notes 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          undefined,
        ],
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/myNotes.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 10,
          },
        ]
      }
    >
      MY NOTES
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 80,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Remember important details about Roger, like favorite food, hobbies they love or something interesting they said.
    </Text>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD PRIVATE NOTES
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes icon and prompt are shown if no notes as community member 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          undefined,
        ],
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/myNotes.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 10,
          },
        ]
      }
    >
      MY NOTES
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 80,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Remember important details about Roger, like favorite food, hobbies they love or something interesting they said.
    </Text>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD PRIVATE NOTES
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes icon and prompt are shown if no notes as me 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          undefined,
        ],
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/myNotes.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 10,
          },
        ]
      }
    >
      MY NOTES
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 80,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Remember important details about your life or spiritual journey, like important milestones, influential people, or things you are learning about God.
    </Text>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD PRIVATE NOTES
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes notes are shown 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    persistentScrollbar={true}
    style={
      Object {
        "flex": 1,
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "borderBottomWidth": 0,
                "color": "#505256",
                "fontSize": 16,
                "marginTop": 30,
                "paddingHorizontal": 36,
                "textAlign": "left",
              },
              null,
            ],
          ]
        }
      >
        Roge rules
      </Text>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          EDIT PRIVATE NOTES
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes press bottom button saves and switches to not editing state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,47 +19,35 @@
          \\"marginBottom\\": undefined,
        }
      }
    >
      <View>
-       <TextInput
-         allowFontScaling={true}
-         autoCorrect={true}
-         autoFocus={false}
-         blurOnSubmit={false}
-         editable={true}
-         multiline={true}
-         onChangeText={[Function onTextChanged]}
-         placeholderTextColor=\\"#505256\\"
-         rejectResponderTermination={true}
-         scrollEnabled={false}
-         selectionColor=\\"#005A7F\\"
+       <Text
          style={
            Array [
+             Object {
+               \\"color\\": \\"#505256\\",
+             },
              Object {
-               \\"backgroundColor\\": \\"transparent\\",
-               \\"borderBottomColor\\": \\"#52C5DC\\",
-               \\"borderBottomWidth\\": 1,
-               \\"color\\": \\"#ffffff\\",
                \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               \\"fontSize\\": 16,
-               \\"letterSpacing\\": 0.25,
-               \\"paddingVertical\\": 5,
              },
+             Array [
                Object {
                  \\"borderBottomWidth\\": 0,
                  \\"color\\": \\"#505256\\",
                  \\"fontSize\\": 16,
                  \\"marginTop\\": 30,
                  \\"paddingHorizontal\\": 36,
                  \\"textAlign\\": \\"left\\",
                },
+               null,
+             ],
            ]
          }
-         underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-         value=\\"Roge rules\\"
-       />
+       >
+         Roge rules
+       </Text>
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
@@ -130,11 +118,11 @@
                  Object {},
                ],
              ]
            }
          >
-           DONE
+           EDIT PRIVATE NOTES
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>"
`;

exports[`contact notes press bottom button switches to editing state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,35 +19,47 @@
          \\"marginBottom\\": undefined,
        }
      }
    >
      <View>
-       <Text
+       <TextInput
+         allowFontScaling={true}
+         autoCorrect={true}
+         autoFocus={false}
+         blurOnSubmit={false}
+         editable={true}
+         multiline={true}
+         onChangeText={[Function onTextChanged]}
+         placeholderTextColor=\\"#505256\\"
+         rejectResponderTermination={true}
+         scrollEnabled={false}
+         selectionColor=\\"#005A7F\\"
          style={
            Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
              Object {
+               \\"backgroundColor\\": \\"transparent\\",
+               \\"borderBottomColor\\": \\"#52C5DC\\",
+               \\"borderBottomWidth\\": 1,
+               \\"color\\": \\"#ffffff\\",
                \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+               \\"fontSize\\": 16,
+               \\"letterSpacing\\": 0.25,
+               \\"paddingVertical\\": 5,
              },
-             Array [
              Object {
                \\"borderBottomWidth\\": 0,
                \\"color\\": \\"#505256\\",
                \\"fontSize\\": 16,
                \\"marginTop\\": 30,
                \\"paddingHorizontal\\": 36,
                \\"textAlign\\": \\"left\\",
              },
-               null,
-             ],
            ]
          }
-       >
-         Roge rules
-       </Text>
+         underlineColorAndroid=\\"rgba(0,0,0,0)\\"
+         value=\\"Roge rules\\"
+       />
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
@@ -118,11 +130,11 @@
                  Object {},
                ],
              ]
            }
          >
-           EDIT PRIVATE NOTES
+           DONE
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>"
`;
